[package]
name = "solana_token_presale"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_token_presale"

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

